# sbpl_arm_planning

./: README.md  clean_packages.sh  stack.xml
control_arm/: CMakeLists.txt  manifest.xml
control_arm/launch/: cylinder_in_collision.launch  cylinder_no_collision.launch  goal0.launch  goal1.launch  goal2.launch  goal3.launch  goal4.launch  goal5.launch  goal6.launch  gokul_hard_test.launch  load_gazebo_with_arm.launch  move_arm_position.launch  move_left.launch  move_left2.launch  pr2_description_with_ik.launch  right_arm.launch  send_arm_position.launch  swing_out_left_arm.launch  swing_out_right_arm.launch  zero_out_arm.launch
control_arm/src/: control_left_arm.cpp  control_right_arm.cpp  move_left_arm.cpp  move_right_arm.cpp
pr2_arm_planning_tests/: CMakeLists.txt  manifest.xml
pr2_arm_planning_tests/include/pr2_arm_planning_tests/: arm_planning_test.h  control_arm.h
pr2_arm_planning_tests/launch/: sbpl_test.launch
pr2_arm_planning_tests/src/: arm_planning_test.cpp  arm_test.cpp  control_arm.cpp
sbpl_arm_planner/: CMakeLists.txt  manifest.xml
sbpl_arm_planner/config/: euclidean_3joints.cfg  params.cfg  pr2_both_arms.yaml  pr2_left_arm.yaml  pr2_right_arm.cfg  pr2_right_arm.yaml
sbpl_arm_planner/environments/: custom.env
sbpl_arm_planner/include/sbpl_arm_planner/: bfs_3d.h  chomp_collision_model.h  intersecting_spheres.h  occupancy_grid.h  sbpl_arm_model.h  sbpl_arm_planner_params.h  sbpl_collision_space.h
sbpl_arm_planner/include/sbpl_arm_planner/pr2/: orientation_solver.h  pr2_workspace.h  sbpl_math.h
sbpl_arm_planner/include/sbpl_arm_planner/robarm3d/: .environment_robarm3d.h.swp  environment_robarm3d.h
sbpl_arm_planner/src/: add_objects_to_map.cpp  bfs_3d.cpp  occupancy_grid.cpp  sbpl_arm_model.cpp  sbpl_arm_planner_params.cpp  sbpl_collision_space.cpp
sbpl_arm_planner/src/discrete_space_information/robarm3d/: environment_robarm3d.cpp
sbpl_arm_planner/src/pr2/: orientation_solver.cpp  pr2_workspace.cpp
sbpl_arm_planner/src/test/: plan_path_test.cpp  run_bfs_3d.cpp  test_bfs_3d.cpp
sbpl_arm_planner_node/: CMakeLists.txt  manifest.xml  pole.env
sbpl_arm_planner_node/include/sbpl_arm_planner_node/: add_objects_to_map.h  remove_objects_from_map.h  sbpl_arm_planner_node.h  visualize_arm.h
sbpl_arm_planner_node/launch/: attach_mesh.launch  floorobj.launch  load_left_arm.launch  pr2_empty.launch  pr2_gazebo_with_pole.launch  right_arm.launch  right_arm_filter.launch  sbpl_planning_left_arm.launch  sbpl_planning_right_arm.launch  trajectory_filter.launch
sbpl_arm_planner_node/src/: add_objects_to_map.cpp  attach_object_to_right_gripper.cpp  remove_objects_from_map.cpp  sbpl_arm_planner_node.cpp  visualize_arm.cpp
sbpl_collision_checking/: CMakeLists.txt  manifest.xml
sbpl_collision_checking/config/: pr2_left_arm_model.yaml  pr2_right_arm_model.yaml
sbpl_collision_checking/include/sbpl_collision_checking/: bresenham.h  occupancy_grid.h  sbpl_collision_model.h  sbpl_collision_space.h  test_sbpl_collision_space.h
sbpl_collision_checking/launch/: test_collision_space.launch
sbpl_collision_checking/src/: benchmark_cc.cpp  occupancy_grid.cpp  sbpl_collision_model.cpp  sbpl_collision_space.cpp  test_sbpl_collision_space.cpp
simple_arm_control/: CMakeLists.txt  manifest.xml
simple_arm_control/launch/: attach_cube.launch  beans.launch  chicken.launch  combined_goals.launch  correct_goal.launch  diffgoal1.launch  diffgoal2.launch  ftrygoal1.launch  ftrygoal2.launch  ftrygoal3.launch  gazebo_with_right_arm_nav.launch  goal0.launch  goal1.launch  goal10.launch  goal2.launch  goal3.launch  goal4.launch  goal5.launch  goal6.launch  goal7.launch  goal8.launch  goal9.launch  incorrect_goal.launch  mgoal1.launch  mgoal2.launch  mgoal3.launch  mgoal4.launch  mhagoal1.launch  mhagoal2.launch  mhgoal1.launch  morkozhambu.launch  move_to_chicken.launch  move_to_goal_1.launch  paruppusli.launch  request_right_arm_plan.launch  set_left_arm_configuration.launch  set_right_arm_configuration.launch  setstart.launch  start.launch  startconfig.launch  (+6 more)
simple_arm_control/src/: attach_object_to_gripper.cpp  control_right_arm.cpp  move_left_arm.cpp  move_right_arm.cpp  move_right_arm_grasp_database.cpp  move_right_arm_multiple_goals.cpp  move_right_arm_multiple_goals_move_arm.cpp
visualize_arm/: CMakeLists.txt  manifest.xml
visualize_arm/include/visualize_arm/: visualize_arm.h
visualize_arm/src/: visualize_arm.cpp
